opam-version: "1.2"
name:         "checkseum"
maintainer:   [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
authors:      [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://github.com/dinosaure/checkseum"
bug-reports:  "https://github.com/dinosaure/checkseum/issues"
dev-repo:     "https://github.com/dinosaure/checkseum.git"
doc:          "https://dinosaure.github.io/checkseum/"
license:      "MIT"

build: [ "ocaml" "pkg/pkg.ml" "build" "--pinned" "%{pinned}%" "--tests" "false" ]

depends: [
  "ocamlbuild"     {build}
  "ocamlfind"      {build}
  "topkg"          {build}
  "optint"
  "base-bytes"
]

available: [ ocaml-version >= "4.03.0" ]
