opam-version: "1.2"
name:         "checkseum"
maintainer:   [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
authors:      [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://github.com/dinosaure/checkseum"
bug-reports:  "https://github.com/dinosaure/checkseum/issues"
dev-repo:     "https://github.com/dinosaure/checkseum.git"
doc:          "https://dinosaure.github.io/checkseum/"
license:      "MIT"

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

build-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]

depends: [
  "dune"          {build}
  "optint"
  "base-bytes"
  "base-bigarray"
  "fmt"
  "rresult"
  "cmdliner"
  "alcotest"      {test}
]

available: [ ocaml-version >= "4.03.0" ]
